# markov-chain-rs

./: COPYING  Cargo.toml  README.md
src/: lib.rs
texts/: pride_and_prejudice.txt  wizard_of_oz.txt
